--- a/styles.css
+++ b/styles.css
@@ -1,43 +1,10 @@
+html {
+    height: 100%;
+    scroll-behavior: smooth;
+}
+
 body {
-    background:
-    radial-gradient(black 15%, transparent 16%) 0 0,
-    radial-gradient(black 15%, transparent 16%) 8px 8px,
-    radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 0 1px,
-    radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 8px 9px;
-    background-color:#282828;
-    background-size:16px 16px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: rgb(222, 222, 222);
-    margin: 0;
-
-    overflow-x: hidden;
-}
-
-#contenidoTotal {
-    position: relative;
-}
-
-header {
-    position: sticky;
-    font-size: 3vw;
-    height: 100px;
-    background-color: rgb(20, 20, 20);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-weight: 700;
-
-    animation: scroll-animation auto;
-    animation-timeline: scroll(block);
-}
-
-@keyframes scroll-animation {
-    30% {
-        backdrop-filter: blur(2px);
-        background-color: rgb(255, 255, 255, .2);
-    }
-    to 100% {
-        body {
+    height: 100%;
     background:
     radial-gradient(black 15%, transparent 16%) 0 0,
     radial-gradient(black 15%, transparent 16%) 8px 8px,
@@ -60,6 +27,7 @@ header {
     position: sticky;
     top: 0; /* Esto asegura que el header se quede en la parte superior */
     font-size: 3vw;
+    width: 100%;
     height: 100px;
     background-color: rgb(20, 20, 20);
     display: flex;
@@ -67,15 +35,7 @@ header {
     align-items: center;
     font-weight: 700;
 
-    animation: scroll-animation auto;
-    animation-timeline: scroll(block);
-}
-
-@keyframes scroll-animation {
-    30% {
-        backdrop-filter: blur(2px);
-        background-color: rgb(255, 255, 255, .2);
-    }
+    transition: .4s ease-in-out;
 }
 
 main {
@@ -92,7 +52,7 @@ main {
     margin-top: 5vw;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    gap: 100px;
+    gap: 2vw;
 }
 
 .proyecto {
@@ -104,9 +64,9 @@ main {
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     padding: 20px;
-    max-width: 100px;
-    min-width: 100px;
-    height: 100%;
+    max-width: 10vw;
+    min-width: 10vw;
+    height: 10vw;
 }
 
 .proyecto > a {
@@ -117,48 +77,4 @@ main {
 .proyecto > a:hover {
     color: rgb(255, 255, 255);
     font-weight: 500;
-}
-
-    }
-}
-
-main {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 100vw;
-    height: 100%;
-    margin-top: 3vw;
-}
-
-.proyectos {
-    margin-top: 5vw;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 100px;
-}
-
-.proyecto {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(20, 20, 20);
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    padding: 20px;
-    max-width: 100px;
-    min-width: 100px;
-    height: 100%;
-
-    &>a {
-        color: rgb(210, 210, 210);
-        text-decoration: none;
-
-        &:hover {
-            color: rgb(255, 255, 255);
-            font-weight: 500;
-        }
-    }
 }
