--- a/styles.css
+++ b/styles.css
@@ -1,80 +1,34 @@
 html {
-    height: 100%;
-    scroll-behavior: smooth;
+    user-select: none;
 }
 
 body {
-    height: 100%;
-    background:
-    radial-gradient(black 15%, transparent 16%) 0 0,
-    radial-gradient(black 15%, transparent 16%) 8px 8px,
-    radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 0 1px,
-    radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 8px 9px;
-    background-color:#282828;
-    background-size:16px 16px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: rgb(222, 222, 222);
-    margin: 0;
-    overflow-x: hidden;
-}
-
-#contenidoTotal {
-    position: relative;
-}
-
-header {
-    position: -webkit-sticky; /* Safari */
-    position: sticky;
-    top: 0; /* Esto asegura que el header se quede en la parte superior */
-    font-size: 3vw;
-    width: 100%;
-    height: 100px;
-    background-color: rgb(20, 20, 20);
     display: flex;
     justify-content: center;
     align-items: center;
-    font-weight: 700;
-
-    transition: .4s ease-in-out;
+    margin: 0;
+    width: 100vw;
+    height: 100vh;
 }
 
 main {
+    border-radius: 20px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 5vw;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-    width: 100vw;
-    height: 100%;
-    margin-top: 3vw;
+    background-color: rgb(16, 83, 114);
+    width: 75vw;
+    height: 50vh;
 }
 
-.proyectos {
-    margin-top: 5vw;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 2vw;
+.caracter{
+    display: inline-block;
 }
 
-.proyecto {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(20, 20, 20);
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    padding: 20px;
-    max-width: 10vw;
-    min-width: 10vw;
-    height: 10vw;
-}
-
-.proyecto > a {
-    color: rgb(210, 210, 210);
-    text-decoration: none;
-}
-
-.proyecto > a:hover {
-    color: rgb(255, 255, 255);
-    font-weight: 500;
+.caracter:hover {
+    transition: transform .05s ease-in-out;
+    cursor: pointer;
+    transform: scale(1.1) translate(0, -10px);
 }
