--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,22 @@
 html {
     user-select: none;
+    scroll-behavior: smooth;
 }
 
 body {
+    margin: 0;
+    overflow-y: scroll;
+    scroll-snap-type: y mandatory;
+}
+
+.content {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 0;
     width: 100vw;
     height: 100vh;
+    scroll-snap-align: start;
 }
 
 main {
@@ -23,12 +31,42 @@ main {
     height: 50vh;
 }
 
-.caracter{
+.caracter {
     display: inline-block;
 }
 
 .caracter:hover {
-    transition: transform .05s ease-in-out;
+    transition: transform .2s ease-in-out;
     cursor: pointer;
     transform: scale(1.1) translate(0, -10px);
+}
+
+/* divisor */
+
+#ejercicios-basicos {
+    background-color: rgb(111, 16, 114);
+    flex-direction: column;
+}
+
+a {
+    border: none;
+    border-radius: 10px;
+    background-color: rgb(16, 83, 114);
+    color: white;
+    font-size: 1.5vw;
+    padding: 10px;
+    margin: 10px;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+a:hover {
+    background-color: rgb(32, 96, 126);
+    scale: 1.05;
+}
+
+h2 {
+    color: white;
+    font-size: 2vw;
+    margin: 10px;
 }
